improved websocket api and added some stuff